--- a/style/main.scss
+++ b/style/main.scss
@@ -1,6 +1,11 @@
+
 body {
 	font-family: sans-serif;
 	text-align: center;
+  background-color: #111f2d;
+  width: 100%;
+  height: 100%;
+  position: fixed;
 }
 
 .App {
@@ -52,14 +57,52 @@ body {
   display: grid;
 }
 
+$cell-border-size: 3;
+$cell-size: 30;
+$open-bg: #c0c0c0;
+
 .Cell {
   text-align: center;
-  border: 3px solid grey;
+  border: #{$cell-border-size}px solid grey;
   cursor: default;
   user-select: none;
   display: flex;
   align-items: center;
   justify-content: center;
+  width: #{$cell-size - (2 * $cell-border-size)}px;
+  height: #{$cell-size - (2 * $cell-border-size)}px;
+  font-size: 525;
+
+  &.closed, &.flagged {
+    background: white;
+  }
+  &.open {
+    background: $open-bg;
+    &.open-1 {
+      color: #0000ff;
+    }
+    &.open-2 {
+      color: #008200;
+    }
+    &.open-3 {
+      color: #ff0000;
+    }
+    &.open-4 {
+      color: #000084;
+    }
+    &.open-5 {
+      color: #840000;
+    }
+    &.open-6 {
+      color: #008284;
+    }
+    &.open-7 {
+      color: #840084;
+    }
+    &.open-8 {
+      color: #757575;
+    }
+  }
 }
 
 .Scoreboard {
