--- a/style/main.scss
+++ b/style/main.scss
@@ -1,15 +1,11 @@
+$cell-border-size: 3;
+$cell-size: 30;
+$open-bg: #c0c0c0;
 
 body {
-	font-family: sans-serif;
-	text-align: center;
+  font-family: sans-serif;
+  text-align: center;
   background-color: #111f2d;
-  width: 100%;
-  height: 100%;
-  position: fixed;
-}
-
-.App {
-  background-color: #abc;
   width: 100%;
   height: 100%;
   position: fixed;
@@ -30,6 +26,11 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+
+  th,
+  td {
+    color: $open-bg;
+  }
 }
 
 .custom-input {
@@ -39,15 +40,15 @@ body {
 #option-table {
   border-collapse: collapse;
   font-size: 0.9em;
-}
 
-#option-table thead tr {
-  text-align: left;
-}
+  thead tr {
+    text-align: left;
+  }
 
-#option-table th,
-#option-table td {
-  padding-right: 12px;
+  th,
+  td {
+    padding-right: 12px;
+  }
 }
 
 .Board {
@@ -56,10 +57,6 @@ body {
   border: 3px solid black;
   display: grid;
 }
-
-$cell-border-size: 3;
-$cell-size: 30;
-$open-bg: #c0c0c0;
 
 .Cell {
   text-align: center;
@@ -73,10 +70,12 @@ $open-bg: #c0c0c0;
   height: #{$cell-size - (2 * $cell-border-size)}px;
   font-size: 15px;
 
-  &.closed, &.flagged {
+  &.closed,
+  &.flagged {
     background: white;
   }
-  &.open, &.mine {
+  &.open,
+  &.mine {
     background: $open-bg;
     &.open-1 {
       color: #0000ff;
