move options -> settings

--- a/style/main.scss
+++ b/style/main.scss
@@ -18,7 +18,7 @@ body {
   flex-direction: column;
 }
 
-.Options {
+.Settings {
   padding-top: 30px;
   position: relative;
   width: 100%;
@@ -37,7 +37,7 @@ body {
   width: 50px;
 }
 
-#option-table {
+#settings-table {
   border-collapse: collapse;
   font-size: 0.9em;
 
