initial scores fetching and rendering

--- a/style/main.scss
+++ b/style/main.scss
@@ -162,7 +162,7 @@ body {
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  /* width: 225px; */
+  width: 12em;
   height: 150px;
 }
 
